(demo): temporary fix for demo on mobile

--- a/demo/assets/css/styles.css
+++ b/demo/assets/css/styles.css
@@ -11,8 +11,14 @@ html {
 body {
     font-family: 'Montserrat', cursive;
     margin: 0;
-    padding: 0 50px;
+    padding: 0 10px;
     text-align: center;
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        padding: 0 50px;
+    }
 }
 
 text {
@@ -41,7 +47,13 @@ a {
     display: inline-block;
     position: relative;
     vertical-align: top;
-    width: 33%;
+    width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+    .grid-1-3 {
+        width: 33%;
+    }
 }
 
 .filter {
@@ -51,13 +63,36 @@ a {
     list-style: none;
 }
 
+.filter-list-wrapper {
+    overflow: auto;
+}
+
+@media screen and (min-width: 1024px) {
+    .filter-list-wrapper {
+        overflow: hidden;
+    }
+}
+
 .filter ul {
     margin-bottom: 10px;
     padding-left: 0;
+    width: 300vw;
+}
+
+@media screen and (min-width: 1024px) {
+    .filter ul {
+        width: 100%;
+    }
 }
 
 .filter .drag {
     display: none;
+}
+
+.content {
+    margin: 0 auto;
+    max-width: 400px;
+    position: relative;
 }
 
 .image-canvas {
@@ -99,7 +134,7 @@ a {
     display: block;
     font-size: 12px;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 0;
     text-transform: uppercase;
 }
 
@@ -150,7 +185,6 @@ a {
 }
 
 .destination {
-    border: 5px double #fff;
     width: 100%;
     height: 99.5%;
     position: absolute;
